# StyleMate

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  docker-compose.cloud.yml  docker-compose.edge.yml  docker-compose.yml  start-backend.bat  start-edge.bat
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agent/: portrait_agent.py  reviewer_agent.py  stylist_agent.py
backend/app/api/: edge.py  knowledge.py  portrait.py  profile.py  recommend.py  review.py  wardrobe.py
backend/app/knowledge/: loader.py
backend/app/knowledge/files/: body_type.md  color_theory.md  fabric_season.md  occasion_guide.md  style_rules.md  trend_terms.md
backend/app/middleware/: error_handler.py
backend/app/models/: clothing.py  user.py
backend/app/services/: cleanup.py  cloud_vision.py  image_gen.py  llm_service.py  style_profiler.py  weather_service.py
edge/: Dockerfile  attribute_pipeline.py  classifier.py  color_analyzer.py  detector.py  main.py  pyproject.toml  server.py  test.json  texture_analyzer.py  uploader.py
frontend/: index.html  nginx.conf  package-lock.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: CameraPanel.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: GalleryView.vue  HomeView.vue  PortraitView.vue  ProfileView.vue  RecommendView.vue  ReviewView.vue  WardrobeView.vue
