[project]
name = "stylemate-backend"
version = "0.1.0"
description = "StyleMate 云端后端 — FastAPI 服务"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "modelscope>=1.37.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.31",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
stylemate-server = "app.main:app"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
